# rapi

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.sh
src/: auth.rs  lib.rs  main.rs  openid.rs
src/openid/: jwks.rs  mod.rs
tests/: integration_test.rs
