[package]
name = "rapi"
version = "0.1.0"
authors = ["Kjell W. Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version="0.5", features=["headers"] }
jsonwebtoken = "8"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
lazy_static="1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_derive = "1"
once_cell = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
