[package]
name = "rapi"
version = "0.1.0"
authors = ["Kjell W. Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
jsonwebtoken = "8"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
lazy_static="1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_derive = "1"
once_cell = "1.8"
