[package]
name = "rapi"
version = "0.1.0"
authors = ["Kjell W. Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version="0.6", features=["headers"] }
jsonwebtoken = "8"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tokio = { version = "1", features = ["full"] }
